atualizei o arquivo index com target=_blank

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>RapidSVN</li>
                     <li>TortoiseSVN</li>
                 </ul> 
-                <a href="https://www.youtube.com/watch?v=bNizVLu8zHM">Clique aqui para assistir Tutorial SVN!</a>
+                <a href="https://www.youtube.com/watch?v=bNizVLu8zHM" target="_blank">Clique aqui para assistir Tutorial SVN!</a>
         </div>
         <div class="interface">
             <h3><strong>Interface GIT:</strong></h3>
