index e style modificados

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no">
         <title>Interface</title>
         <link href="style.css" rel="stylesheet">
     </head>
@@ -39,7 +40,6 @@
                 mensagem de log e as alterações relativas ao commit. Além disso, ele trabalha com feeds
                 em rss ou no formato atom. Outro bom cliente de interface web para o GIT é o Cgit, que
                 possui uma interface melhor do que a do gitweb e disponibiliza ainda mais detalhes.</p>
-                
                 <strong>Obs: O "forte" do GIT não estar baseado em Interface Web como SVN!</strong>
                 
         </div>
