add arquivo js e modifiquei os arquivos index, style

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta id="viewport" name="viewport" content="width=device-width, user-scalable=no">
         <title>Interface</title>
         <link href="style.css" rel="stylesheet">
+        <script type="text/javascript" src="script.js"></script>
     </head>
-    <body class="efeito">
+    <body class="efeito" onload="carregou()">
+       <div class="cima"></div>
         <div class="topo">
-            <h1><strong>Controles de Versionamentos GIT VS SVN</strong></h1>
+            <h1 class="centralizado"><strong>Controles de Versionamentos GIT VS SVN</strong></h1>
         </div>
         <div class="interface">
             <h3><strong>Interface SVN:</strong></h3>
